--- a/Login page using bootstrap/main.html
+++ b/Login page using bootstrap/main.html
@@ -12,14 +12,15 @@
     <div class="container">
         <div class="row">
           <div class="col-sm-9 col-md-7 col-lg-5 mx-auto">
-            <div class="card border-1 shadow rounded-5 mt-5">
+            <div class="card border-1 shadow rounded-5 mt-5 bg-light">
               <div class="card-body p-4 p-sm-5">
                 <h6 class="mt-3">Username</h6>
                 <input class="form-control mt-1" placeholder="Ex. john365">
                 <h6 class="mt-3">Password</h6>
                 <input type="password" class="form-control mt-1" placeholder="Ex. 123">
-                <div class="mt-3">
-                    <input type="checkbox">Remeber me
+                <div class="mt-3 text-primary">
+                    <input type="checkbox" id="Remeberme">
+                    <label for="Remeberme"> Remeber me</label>
                 </div>
                 <div class="text-center mt-3">
                     <button class="btn btn-primary">Log In</button>
