Created Sign up page

--- a/Login page using bootstrap/main.html
+++ b/Login page using bootstrap/main.html
@@ -4,9 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login Page</title>
+    <title>Log In Page</title>
     <link rel="stylesheet"  href="css/bootstrap.css"/>
-    <title>Document</title>
 </head>
 <body>
     <div class="container">
@@ -27,7 +26,7 @@
                 </div>
                 <div class="text-center mt-3">
                     <p class="d-inline-block">Not a member?</p>
-                    <a href="">Sign Up</a>
+                    <a href="signUp.html">Sign Up</a>
                 </div>
                 
                
