Completed Sign up page

--- a/Login page using bootstrap/signUp.html
+++ b/Login page using bootstrap/signUp.html
@@ -8,6 +8,35 @@
     <link rel="stylesheet"  href="css/bootstrap.css"/>
 </head>
 <body>
-    
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-9 col-md-7 col-lg-8 mx-auto">
+                <div class="card border-1 shadow rounded-5 mt-5 bg-light">
+                    <div class="card-body p-4 p-sm-5">
+                        <h6 class="mt-3">First Name</h6>
+                        <input class="form-control mt-1" placeholder="Ex. John">
+                        <h6 class="mt-3">Family Name</h6>
+                        <input class="form-control mt-1" placeholder="Ex. Smith">
+                        <h6 class="mt-3">Email</h6>
+                        <input class="form-control mt-1" type="email" placeholder="Ex. john_smith@gmail.com">
+                        <h6 class="mt-3">Username</h6>
+                        <input class="form-control mt-1" placeholder="Ex. john365">
+                        <h6 class="mt-3">Password</h6>
+                        <input type="password" class="form-control mt-1" placeholder="Ex. 123">
+                        <h6 class="mt-3">Repeat Password</h6>
+                        <input type="password" class="form-control mt-1">
+                        <div class="text-center mt-3">
+                            <button class="btn btn-success">Sign Up</button>
+                        </div>
+                        <div class="text-center mt-3">
+                            <p class="d-inline-block">Already a member?</p>
+                            <a href="main.html">LogIn</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+                
 </body>
 </html>
