--- a/Login page using bootstrap/main.html
+++ b/Login page using bootstrap/main.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Log In Page</title>
+    <title>LogIn Page</title>
     <link rel="stylesheet"  href="css/bootstrap.css"/>
 </head>
 <body>
@@ -21,7 +21,7 @@
                             <input type="checkbox" id="Remeberme">
                             <label for="Remeberme"> Remeber me</label>
                         </div>
-                        <div class="text-center mt-3">
+                        <div class="mt-3 d-grid gap-2 col-6 mx-auto">
                             <button class="btn btn-primary">Log In</button>
                         </div>
                         <div class="text-center mt-3">
