--- a/Login page using bootstrap/signUp.html
+++ b/Login page using bootstrap/signUp.html
@@ -25,7 +25,7 @@
                         <input type="password" class="form-control mt-1" placeholder="Ex. 123">
                         <h6 class="mt-3">Repeat Password</h6>
                         <input type="password" class="form-control mt-1">
-                        <div class="text-center mt-3">
+                        <div class="text-center mt-3 d-grid gap-2 col-6 mx-auto">
                             <button class="btn btn-success">Sign Up</button>
                         </div>
                         <div class="text-center mt-3">
