--- a/Login page using bootstrap/main.html
+++ b/Login page using bootstrap/main.html
@@ -19,7 +19,7 @@
                         <input type="password" class="form-control mt-1" placeholder="Ex. 123">
                         <div class="mt-3 text-primary">
                             <input type="checkbox" id="Remeberme">
-                            <label for="Remeberme"> Remeber me</label>
+                            <label for="Remeberme"> Remember me</label>
                         </div>
                         <div class="mt-3 d-grid gap-2 col-6 mx-auto">
                             <button class="btn btn-primary">Log In</button>
